# smartctx

./: .gitignore  .smartctxignore  README.md  package-lock.json  package.json  pyproject.toml  setup.py
.claude/: settings.json
.github/workflows/: publish.yml
dist-python/: smartctx-0.1.2-py3-none-any.whl  smartctx-0.1.3-cp310-cp310-win_amd64.whl  smartctx-0.1.3-py3-none-any.whl
homebrew/: smartctx.rb
python/smartctx/: __init__.py  __main__.py  cli.py  generator.c  generator.py  query.c  query.py  scanner.c  targets.py
python/smartctx.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scoop/: smartctx.json
scripts/: obfuscate-js.js
src/: generator.ts  index.ts  query.ts  scanner.ts  storage.ts  summarizer.ts  targets.ts
vscode-extension/: .vscodeignore  README.md  esbuild.js  package-lock.json  package.json  tsconfig.json
vscode-extension/media/: main.css  main.js
vscode-extension/src/: core.ts  extension.ts  sidebar.ts
